--- a/src/pages/History/Searched.module.css
+++ b/src/pages/History/Searched.module.css
@@ -1,5 +1,6 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 20px 40px;
     gap: 20px;
@@ -9,4 +10,10 @@
 .back {
     font-size: 30px;
     
+}
+
+.gallery_container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
