--- a/src/components/Dialog.module.css
+++ b/src/components/Dialog.module.css
@@ -26,7 +26,10 @@
     position: fixed;
     top: 10px;
     right: 10px;
-    color: red;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    font-size: 20px;
 }
 
 .stats {
