--- a/src/pages/History/Searched.module.css
+++ b/src/pages/History/Searched.module.css
@@ -12,12 +12,30 @@
     
 }
 
+.photoCard_container {
+    overflow: hidden;
+}
+
 .gallery_container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
 
-.photoCard_container {
-    overflow: hidden;
+@media only screen and (max-width: 1200px) {
+    .gallery_container {
+        grid-template-columns: repeat(3, 1fr);
+    }   
+}
+
+@media only screen and (max-width: 1000px) {
+    .gallery_container {
+        grid-template-columns: repeat(2, 1fr);
+    }   
+}
+
+@media only screen and (max-width: 680px) {
+    .gallery_container {
+        grid-template-columns: repeat(1, 1fr);
+    }   
 }
