--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -15,6 +15,7 @@
 .searchbox {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 20px;
 }
 
@@ -32,6 +33,25 @@
 
 .gallery_container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .gallery_container {
+        grid-template-columns: repeat(3, 1fr);
+    }   
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .gallery_container {
+        grid-template-columns: repeat(2, 1fr);
+    }   
+}
+
+@media only screen and (max-width: 680px) {
+    .gallery_container {
+        grid-template-columns: repeat(1, 1fr);
+    }   
 }
